# YT-video-summarizer

./: .bandit  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
api/endpoints/: video.py
configs/: logger.py
models/: video.py
services/: summarizer.py  text_cleaner.py  transcriber.py
tests/: test_endpoint.py  test_services.py
